# k-law-evidence-pipeline

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.en.md  README.ko.md  README.md  SECURITY.md  pyproject.toml
docs/: answer_format_standard.md  api_strategy.md  architecture.md  civic_use_cases.md  complaint_drafting_assistant.md  document_template_policy.md  drafting_boundary.md  evidence_schema.md  free_api_strategy.md  international_adaptation.md  jurisdiction_adapter_contract.md  local_database_schema.md  mcp_client_config.md  mcp_design.md  mvp_scope.md  output_schema.md  persona_answer_modes.md  roadmap.md  safety_policy.md  search_ranking_policy.md  source_policy.md  tool_contracts.md  ui_mvp_spec.md  ui_search_design.md  universal_pipeline.md  usage.md  vision.md
examples/: privacy_leak_case.sample.md
scripts/: openlaw_probe.py
src/klep/: __init__.py  main.py  mcp_server.py
src/klep/answering/: __init__.py  schema.py
src/klep/drafting/: __init__.py  schema.py
src/klep/evidence/: __init__.py  schema.py
src/klep/jurisdictions/: __init__.py  kr.py  profile.py
src/klep/law_sources/: __init__.py  base.py  korea_openlaw.py
src/klep/pipeline/: __init__.py  stages.py
src/klep/search/: __init__.py  query.py  ranking.py
src/klep/security/: pii_masker.py
templates/: README.md  complaint_ko.md  items.md  timeline_ko.md
tests/: test_pii_masker.py  test_source_envelope.py
