[project]
name = "k-law-evidence-pipeline"
version = "0.1.0"
description = "Local-first legal evidence and document drafting assistant with MCP support."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Han-think" }
]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "typer>=0.12.3",
  "rich>=13.7.0",
  "mcp>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0"
]

[project.scripts]
klep = "klep.main:app"
klep-mcp = "klep.mcp_server:main"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
